# univer

./: .gitignore  1lab.py  2lab.py  2lab.sql  2labv2.clj  3lab.py  4lab.sql  5lab.py  5lab_director.sql  6lab_economist.sql  7lab.sql  Atom.cs  AtomStack.cs  CMakeLists.txt  Chemist.cs  Compound.cs  CompoundExperiment.cs  Element.cs  Ion.cs  IonExperiment.cs  Isotope.cs  IsotopeExperiment.cs  Knowledge.cs  PeriodicTable.cs  Procfile  Program.cs  README.md  ad_pb2.py  ad_pb2_grpc.py  analysis.tex  architecture.tex  beginning.tex  bibliography.tex  client.py  conclusion.tex  curse.tex  db.db  db.py  formrawsqlparam.lfm  formsettingsunit.pas  (+37 more)
Collection/: AtomicCollection.cs  AtomicComparators.cs
Config/: ConfigReader.cs  Configuration.cs
Interfaces/: ExperimentType.cs  IAtomic.cs  ICharged.cs  IExperiment.cs
Log/: ConsoleLogger.cs  FileLogger.cs  LogEvents.cs  Logger.cs
Particles/: Electron.cs  Neutron.cs  Proton.cs
backup/: formrawsqlparamunit.lfm  formsettingsunit.pas  mainformunit.lfm  mainformunit.pas  ppvpd.lpi  ppvpd.lpr  ppvpd.lps  settingsunit.lfm  settingsunit.pas  unit1.lfm  unit1.pas  unitlogin.lfm  unitlogin.pas
chemistry/: Atom.cs  AtomStack.cs  Chemist.cs  Compound.cs  IonExperiment.cs  Program.cs  config.cfg
computer_graphics/: 1lab.py  2lab.py  4lab.py  help.txt  test.py
config/: database.yml
controllers/: AuthController.go  DialoguesController.go  LocationContoller.go  MessageController.go  (+1 more)
js/: auth.js
lab3/: Board.cpp  Board.h  CMakeLists.txt  FigureBishop.cpp  FigureColor.h  FigurePawn.h  FigureRook.h  FigureType.h  lab3.sln  main.cpp
(+280 files in other folders)
